# musicbrainzpy

./: .gitignore  Cargo.toml  README.md  api.py  cover_art.py  download.py  main.py  metadata.py  musicbrainz.py  musicbrainz_api.py  pybrainz.py  setup.py
files/: content.txt
files/Little Queen/1a76a393-2b7d-4837-bd3c-48fd601e3214/: meta.txt
files/Little Queen/3fc2e224-5da9-4c21-acbe-8a5fdc8ceeb0/: meta.txt
files/Little Queen/45cc0267-bbe1-4ef1-931c-8b5a50c9acb0/: meta.txt
files/Little Queen/895d34a2-ddc0-45ac-8242-6802aedd6de5/: meta.txt
files/Little Queen/93a0515a-7fe7-4886-9db9-63b1b46f93ad/: meta.txt
files/Little Queen/94662740-2a37-4ddd-a723-f0f9c93a11b5/: meta.txt
files/Little Queen/946c2c90-e3f7-4890-ac38-99bc60c454ae/: meta.txt
files/Little Queen/95af5493-d553-42c8-a2ca-4ba46973e85f/: meta.txt
files/Little Queen/977e8bc5-3f17-4e51-9b5e-61d51678248e/: meta.txt
files/Little Queen/97ee0dea-7f27-4508-b523-0bb70747445b/: meta.txt
files/Little Queen/9e38254a-a492-3e41-8d9f-2f52b311aa45/: meta.txt
files/Little Queen/a2bf61b3-88c0-4bf6-a1c4-1d18c066c325/: meta.txt
files/Little Queen/a3e92dfb-8f14-4ed8-8d29-9e646e3d8a7d/: meta.txt
files/Little Queen/b648d2f3-8e20-4334-96ea-8a41cef34300/: meta.txt
files/Little Queen/c89e4898-dacd-43f9-8570-2e9e354c391c/: meta.txt
files/Little Queen/ed7ec2a9-2c83-4e12-a02e-24580ebe9612/: meta.txt
files/Little Queen/efcc2c44-4365-468a-afe8-2acf47ee8de3/: meta.txt
files/Little Queen/f14c6b7a-382c-42a2-a7bc-e4aff3891d72/: meta.txt
src/: main.rs
