[package]
name = "mbz"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = [
    "derive",
    "color",
    "help",
    "suggestions",
] }
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
musicbrainz_rs = { version = "0.5.0" }
